force-app/main/default/objects/Apttus_Config2__PriceRule__c/Apttus_Config2__PriceRule__c.object-meta.xml
<CustomObject>
    <description>Represents a single rule in a price ruleset</description>
    <label>Price Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>