force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__MilestoneCriteriaOper__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__MilestoneCriteriaOper__c</fullName>
    <description>The milestone criteria operator</description>
    <inlineHelpText>The milestone criteria operator</inlineHelpText>
    <label>Milestone Criteria Oper</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>not in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>