force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__PricePoints__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PricePoints__c</fullName>
    <description>Represents the price point name when the rule type is Price Point or Net Price Point. Or a list of target price points when the rule type is Dimension/Condition.</description>
    <inlineHelpText>Zero or more target price point names. Required if the rule type is Price Point or Net Price Point</inlineHelpText>
    <label>Price Points</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>List Price</fullName>
            </value>
            <value>
                <fullName>Base Price</fullName>
            </value>
            <value>
                <fullName>Net Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>