force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__RuleType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RuleType__c</fullName>
    <description>The rule type</description>
    <inlineHelpText>1. SINGLE RATE:  Same rate for all qualified txns.
2. RATE TABLE- NO TIERS:  Different rates based on discrete values e.g. Asia  – $5 | EMEA - $10
3. RATE TABLE - WITH TIERS: Different rate based on volume or revenue tiers - 1-100 - $5, 101-1000 - $10</inlineHelpText>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dimension</fullName>
            </value>
            <value>
                <fullName>Condition</fullName>
            </value>
            <value>
                <fullName>Single Rate</fullName>
            </value>
            <value>
                <fullName>Rate Table - No Tiers</fullName>
            </value>
            <value>
                <fullName>Rate Table - With Tiers</fullName>
            </value>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Inclusion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>