force-app/main/default/objects/Apttus_Config2__PriceRule__c/fields/Apttus_Config2__TierMetricType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TierMetricType__c</fullName>
    <description>The type of metric associated with rate table tiers</description>
    <inlineHelpText>Indicates the type of metric used to define the rate table tiers
1.	VOLUME: Rate tiers based on the transaction volume (quantity)
2.	REVENUE: Rate tiersbased on the transaction revenue (price)</inlineHelpText>
    <label>Tier Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Volume</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>